--- a/index.html
+++ b/index.html
@@ -7,22 +7,35 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Feliz 1 Ano de Nós Dois 💖</h1>
-    <p>Hoje é ainda mais especial, porque também é o seu aniversário 🎂</p>
-  </header>
+  <!-- Cartinha com envelope -->
+  <div id="cartinha" class="cartinha">
+    <div class="envelope">
+      <div class="carta">
+        <h2>Meu amor 💖</h2>
+        <p id="mensagemCartinha">Carregando...</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contador -->
+  <section class="contador">
+    <h2>Quanto tempo estamos juntos ⏳</h2>
+    <p id="tempoJuntos">Carregando...</p>
+  </section>
 
   <main>
     <!-- Mensagem principal -->
     <section class="mensagem">
       <h2>Minha declaração para você</h2>
       <p>
-        Amor, faz 1 ano que estamos juntos e cada dia ao seu lado é uma
-        benção na minha vida.  
-        Você é o meu sorriso, minha paz e meu maior presente.  
-        Hoje, além de comemorar nosso amor, celebro também o dia em que
-        você nasceu, a pessoa mais linda do mundo.  
-        Eu te amo para sempre! ❤️
+        Obrigado por ser essa pessoa especial para mim, por cuidar de mim e me fazer sentir amado.
+        Obrigado por ter feito esses 365 dias mais alegres e por ter dado mais cor à minha vida. Não sei o que seria sem você. Muitas vezes você é o meu sustento, e quando lembro de você, o mundo fica mais leve, e quando estou ao seu lado o mundo desaparece nada mais importa so eu e voce e sei que tenho uma mulher linda e guerreira, que, independente de qualquer dificuldade, levanta a cabeça e continua.
+
+        Obrigado por me fazer sentir especial. Saiba que você é o meu especial. Você, pouco a pouco, se tornou uma das pessoas mais importantes da minha vida, e não me vejo mais sem você. Não consigo imaginar meus sonhos e conquistas sem você ao meu lado.
+
+        Saiba que eu te amo muito ❤ e que venham muitos anos juntos.
+
+        E, óbvio, feliz aniversário, meu amor! 🥳 Chegamos às casas dos 2.0 🎈. Que venham muitas coisas maravilhosas na sua vida e, o mais importante, que Deus esteja sempre ao seu lado 🙏🏻, protegendo você de tudo 🙌🏻🌹.
       </p>
     </section>
 
@@ -35,7 +48,7 @@
         <img src="imagens/Imagem do WhatsApp de 2025-08-28 à(s) 18.14.05_640fedab.jpg" alt="Nossa foto 3">
         <img src="imagens/Imagem do WhatsApp de 2025-08-28 à(s) 18.14.05_e76a94bf.jpg" alt="Nossa foto 4">
         <img src="imagens/Imagem do WhatsApp de 2025-08-28 à(s) 18.14.06_4acbbe32.jpg" alt="Nossa foto 5">
-        <img src="imagens/Imagem do WhatsApp de 2025-08-28 à(s) 18.14.06_233a9ffa.jpg" alt="Nossa foto 5">
+        <img src="imagens/Imagem do WhatsApp de 2025-08-28 à(s) 18.14.06_233a9ffa.jpg" alt="Nossa foto 6">
       </div>
     </section>
 
@@ -47,10 +60,6 @@
           <source src="videos/Vídeo do WhatsApp de 2025-08-28 à(s) 18.50.46_6732a182.mp4" type="video/mp4">
           Seu navegador não suporta vídeos.
         </video>
-        <video controls>
-          <source src="video2.mp4" type="video/mp4">
-          Seu navegador não suporta vídeos.
-        </video>
       </div>
     </section>
   </main>
@@ -59,7 +68,7 @@
     <p>Feito com todo meu amor, só para você ❤️</p>
   </footer>
 
-  <!-- Script dos corações -->
+  <!-- Script dos corações, contador e cartinha -->
   <script src="script.js"></script>
 </body>
 </html>
