--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
       </p>
     </section>
 
+<!-- Mensagens Fixas -->
+<section class="mensagens-fixas">
+  <h2>💌 Mensagens Especiais</h2>
+  <p id="msgAno">Feliz 1 ano juntos, meu amor! 💖</p>
+  <p id="msgAniversario">Feliz aniversário, minha princesa 🎂🌹</p>
+</section>
+
+
     <!-- Galeria de fotos -->
     <section class="galeria">
       <h2>Nossas Lembranças 📸</h2>
@@ -57,7 +65,7 @@
       <h2>Momentos em Vídeo 🎥</h2>
       <div class="grid">
         <video controls>
-          <source src="videos/Vídeo do WhatsApp de 2025-08-28 à(s) 18.50.46_6732a182.mp4" type="video/mp4">
+          <source src="videos/WhatsApp Video 2025-10-05 at 13.13.04.mp4" type="video/mp4">
           Seu navegador não suporta vídeos.
         </video>
       </div>
